chore: rename config_type and external_type to config_class and type
